update: replace icon from svg to font-awesome icon; update font-awesome to 5.3.1 pro.

--- a/static/css/qaadmin.css
+++ b/static/css/qaadmin.css
@@ -132,6 +132,13 @@
     color: #db4545;
 }
 
+/* icon-infomation */
+.icon-info {
+    font-size: 15px;
+    width: 15px;
+    color: #9d9d9d;
+}
+
 .logo {
     width: 150px;
     vertical-align:middle;
