--- a/templates/index.html
+++ b/templates/index.html
@@ -110,32 +110,34 @@
                                     <div class="two-line fade-out">
                                         <h2 class="row-item">
                                           <span :class="'label-align '+item.status">
-                                          <i class="fas fa-check" style="font-size: 16px;" v-if="item.success"></i>
-                                          <i class="fas fa-times" style="font-size: 16px; width: 16px; padding-left: 2px;" v-else></i>
+                                          <i class="fal fa-check" style="font-size: 16px;" v-if="item.success"></i>
+                                          <i class="fal fa-times" style="font-size: 16px; width: 16px; padding-left: 2px;" v-else></i>
                                           {{item.version}}</span>
                                         </h2>
                                       <div class="row-builds">
                                         <div class="row-item">
-                                          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15" class="icon">
-                                              <path class="st0" d="M11.553 11.153c0 .663.589 1.216 1.289 1.105.442-.074.811-.442.884-.884.111-.553-.221-1.032-.663-1.216-.258-.111-.405-.368-.405-.663v-3.26M.868 5.867C.647 5.867.5 4.117.5 4.117c0-.221.147-.442.332-.479l2.616-.958h3.193l7.491 1.032c.221.036.368.22.368.404 0 0-.184 1.75-.368 1.75L.868 5.867zm5.767 8.602V1.206c0-.221-1.161-.405-1.345-.442L3.816.506c-.184-.037-.369.11-.369.294v13.632h2.211l.977.037zm2.21 0H1.237h7.608z"></path>
-                                          </svg>
-                                        <span class="label-align">
-                                            {{item.count}} builds
-                                        </span>
+                                            <span class="label-align">
+                                                <i class="fal fa-tasks icon-info"></i>
+                                                {{item.count}} builds
+                                            </span>
                                         </div>
                                       </div>
                                     </div>
                                     <div class="two-line fade-out">
                                       <div class="row-item">
                                         <div>
-                                          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15" class="icon"><circle class="st0" cx="7.5" cy="7.5" r="7"></circle><path class="st1" d="M7.275 3.208V7.5L9.98 9.254"></path></svg>
-                                          <time class="label-align" datetime="PT49S">{{item.duration}} sec</time>
+                                            <time class="label-align" datetime="PT49S">
+                                                <i class="fal fa-alarm-clock icon-info"></i>
+                                                {{item.duration}} sec
+                                            </time>
                                         </div>
 
                                       <div class="row-item row-calendar">
                                         <div title="Finished September 21, 2018 17:56:00">
-                                          <svg viewBox="0 0 15 15" class="icon"><path class="st0" d="M.861.5H14.22v14H.861zm13.252 4.061H1.182"></path><path class="st0" d="M4.639 7.913c.178-.166.475-.359.893-.359.734 0 2.093 1.164-.906 3.906h2.297m1.295-3.905h2.425s-1.4 1.693-1.4 3.906"></path></svg>
-                                          <time class="label-align" datetime="2018-09-21T09:56:38Z">a day ago</time>
+                                            <time class="label-align" datetime="2018-09-21T09:56:38Z">
+                                                <i class="fal fa-calendar-alt icon-info"></i>
+                                                a day ago
+                                            </time>
                                         </div>
                                       </div>
                                     </div></div>
