--- a/templates/index.html
+++ b/templates/index.html
@@ -9,23 +9,10 @@
                 <div id="main" class="main" role="main">
                     <article class="repo-header">
                         <header class="name">
-                            <div id="ember378"
-                                 class="ember-view ember-tooltip-or-popover-target ember-tooltip-or-popover-element-attached-bottom ember-tooltip-or-popover-element-attached-center ember-tooltip-or-popover-target-attached-top ember-tooltip-or-popover-target-attached-center"
-                                 aria-describedby="ember380" tabindex="0">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" alt="Public repository"
-                                     class="icon public">
-                                    <g fill="none" stroke="#9ea3a8" stroke-linecap="round" stroke-linejoin="round"
-                                       stroke-miterlimit="10">
-                                        <path d="M7.089 13.343h6.434L13.524 1H2.176v12.343H4.46M2.176 10.543h11.348"></path>
-                                        <path d="M4.46 12.239v2.756l1.394-1.285 1.235 1.236v-2.707zM4.199 1v9.543M5.635 8.737h.63M5.635 6.782h.63M5.635 4.828h.63M5.635 2.873h.63"></path>
-                                    </g>
-                                </svg>
-
-
-                            </div>
                             <h1 class="repo-title">
-                                <a id="ember381" class="ember-view">[todo:Group]</a> / <a
-                                    :href="'/project/'+pro_id" id="ember382" class="active ember-view">{{pro_id}}</a>
+                                <i class="fal fa-book fa-xs" style="color:#9d9d9d;"></i>
+                                [todo:Group] /
+                                <a :href="'/project/'+pro_id" class="active">{{pro_id}}</a>
                             </h1>
                         </header>
                         <main class="repo-main">
@@ -33,80 +20,45 @@
                                 <nav id="testtype_nav" class="qaadmin-nav ">
                                     <ul>
                                         <li id="tab_current" class="active">
-                                            <a href="/intest-tech/qaadmin" id="ember386" class="active">
+                                            <a :href="'/project/'+pro_id" class="active">
                                                 Current
-                                            </a></li>
-                                        <li id="tab_branches">
-                                            <a href="/intest-tech/qaadmin/branches" id="ember387"
-                                               class="ember-view"> Branches
-                                            </a></li>
-                                        <li id="tab_builds">
-                                            <a href="/intest-tech/qaadmin/builds" id="ember388" class="ember-view">
-                                                Build History
-                                            </a></li>
-                                        <li id="tab_pull_requests">
-                                            <a href="/intest-tech/qaadmin/pull_requests" id="ember389"
-                                               class="ember-view"> Pull Requests
-                                            </a></li>
-                                        <li id="tab_build" class="">
-                                            <svg viewBox="0 0 15 15" class="tab-arrow">
-                                                <path fill="none" stroke="#9d9d9d"
-                                                      d="M4.32.5l6.247 6.942L4.32 14.5"></path>
-                                            </svg>
-                                            <a href="/intest-tech/qaadmin/builds/431048533" id="ember390"
-                                               class="ember-view"> Build #9
-                                            </a></li>
-                                        <li id="tab_job">
-                                            <a href="/intest-tech/qaadmin/jobs/431048534" id="ember391"
-                                               class="ember-view"> Job #9.1
-                                            </a></li>
-                                        <li id="tab_settings">
-                                            <a href="/intest-tech/qaadmin/settings" id="ember392"
-                                               class="ember-view"> Settings
-                                            </a></li>
-                                        <li id="tab_requests">
-                                            <a href="/intest-tech/qaadmin/requests" id="ember393"
-                                               class="ember-view"> Requests
-                                            </a></li>
-                                        <li id="tab_caches">
-                                            <a href="/intest-tech/qaadmin/caches" id="ember394" class="ember-view">
-                                                Caches
-                                            </a></li>
+                                            </a>
+                                        </li>
                                     </ul>
                                 </nav>
-                                <nav id="ember395" class="option-button ember-view">
+                                <nav class="option-button">
                                     <button class="option-display" title="Show more options" type="button">
                                         <span class="label-align">More options</span>
-                                        <span class="option-tofu"><svg xmlns="http://www.w3.org/2000/svg"
-                                                                       viewBox="-503.7 379.2 17 10"
-                                                                       class="icon-tofu"><path
-                                                d="M-487.3 380.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6z"></path></svg></span>
+                                        <span class="option-tofu">
+                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                 viewBox="-503.7 379.2 17 10"
+                                                 class="icon-tofu">
+                                                <path d="M-487.3 380.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6zm0 4.4H-503c-.4 0-.6-.3-.6-.6s.3-.6.6-.6h15.7c.4 0 .6.3.6.6s-.3.6-.6.6z"></path>
+                                            </svg>
+                                        </span>
                                     </button>
-                                    <ul class="option-dropdown">
-                                        <li>
-                                            <a href="/intest-tech/qaadmin/settings" id="ember396"
-                                               class="ember-view">Settings</a>
-                                        </li>
-                                        <li>
-                                            <a href="/intest-tech/qaadmin/requests" id="ember397"
-                                               class="ember-view">Requests</a>
-                                        </li>
-                                        <li>
-                                            <a href="/intest-tech/qaadmin/caches" id="ember398"
-                                               class="ember-view">Caches</a>
-                                        </li>
-                                        <li>
-                                            <button class="trigger-build-anchor" type="button" data-ember-action=""
-                                                    data-ember-action-399="399">Trigger build
-                                            </button>
-                                        </li>
-                                    </ul>
+                                    <!--<ul class="option-dropdown">-->
+                                        <!--<li>-->
+                                            <!--<a href="/intest-tech/qaadmin/settings">Settings</a>-->
+                                        <!--</li>-->
+                                        <!--<li>-->
+                                            <!--<a href="/intest-tech/qaadmin/requests">Requests</a>-->
+                                        <!--</li>-->
+                                        <!--<li>-->
+                                            <!--<a href="/intest-tech/qaadmin/caches">Caches</a>-->
+                                        <!--</li>-->
+                                        <!--<li>-->
+                                            <!--<button class="trigger-build-anchor" type="button">-->
+                                                <!--Trigger build-->
+                                            <!--</button>-->
+                                        <!--</li>-->
+                                    <!--</ul>-->
                                 </nav>
                             </div>
 
                             <!--test record-->
                             <div class="test-result-list">
-                                <li id="ember736" :class="'branch-row row-li '+item.status" v-for="item in list">
+                                <li :class="'branch-row row-li '+item.status" v-for="item in list">
                                     <div class="two-line fade-out">
                                         <h2 class="row-item">
                                           <span :class="'label-align '+item.status">
@@ -147,14 +99,8 @@
                                           <li title="Build #9 passed" :class="item[p].success ? 'passed': 'failed'" v-for="p in pipeline" v-if="item[p]">
                                               <a :href="'/project/'+pro_id+'/job/'+item[p].id">
                                                   <span title="Job passed" aria-label="Job passed" class="status-icon icon passed">
-                                                  <!--<i class="fas fa-check" style="font-size: 20px;" v-if="item[p].success"></i>-->
-                                                  <!--<i class="fas fa-times" style="font-size: 20px; width: 20px;" v-else></i>-->
-                                                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15" v-if="item[p].success">
-                                                          <path d="M14.5 1.5L6.499 13.716.5 8.78"></path>
-                                                      </svg>
-                                                      <svg viewBox="0 0 15 15" v-else>
-                                                          <path d="M.5.5l14 14m0-14l-14 14" fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
-                                                      </svg>
+                                                      <i class="fal fa-check" style="font-size: 20px;" v-if="item[p].success"></i>
+                                                      <i class="fal fa-times" style="font-size: 20px; width: 20px;" v-else></i>
                                                   </span>
                                                   <span class="build-tile-number">{{p}}</span>
                                               </a>
