--- a/templates/job.html
+++ b/templates/job.html
@@ -3,7 +3,7 @@
   {% block script %}
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/static/js/project.js"></script>
-  <!--<link rel="stylesheet" href="/static/css/travis-bak.css">-->
+  <script src="/static/js/opensource/echarts.js"></script>
   <link rel="stylesheet" href="/static/css/job.css">
   {% endblock %}
 
@@ -15,17 +15,9 @@
       <div id="main" class="main" role="main">
       <article class="repo-header">
         <header class="name">
-          <div class="ember-tooltip-or-popover-target ember-tooltip-or-popover-target-attached-top ember-tooltip-or-popover-target-attached-center" tabindex="0">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" alt="Public repository" class="icon public">
-              <g fill="none" stroke="#9ea3a8" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10">
-                <path d="M7.089 13.343h6.434L13.524 1H2.176v12.343H4.46M2.176 10.543h11.348"></path>
-                <path d="M4.46 12.239v2.756l1.394-1.285 1.235 1.236v-2.707zM4.199 1v9.543M5.635 8.737h.63M5.635 6.782h.63M5.635 4.828h.63M5.635 2.873h.63"></path>
-              </g>
-            </svg>
-
-          </div>
           <h1 class="repo-title">
-            <a>[TODO:Group]</a> /
+            <i class="fal fa-book fa-xs" style="color:#9d9d9d;"></i>
+            [todo:Group] /
             <a :href="'/project/'+pro_id" class="active">{{pro_id}}</a>
           </h1>
         </header>
@@ -34,18 +26,9 @@
             <nav id="testtype_nav" class="qaadmin-nav">
               <ul>
                 <li id="tab_current" class="active">
-                  <a :href="'/project/gt-server/job/'+job_id" class="active">
+                  <a :href="'/project/'+pro_id+'/job/'+job_id" class="active">
                     Current
-                  </a></li>
-                <li id="tab_branches">
-                  <a href="/intest-tech/qaadmin/branches"> Branches
-                  </a></li>
-                <li id="tab_builds">
-                  <a href="/intest-tech/qaadmin/builds">
-                    Build History
-                  </a></li>
-                <li id="tab_pull_requests">
-                  <a href="/intest-tech/qaadmin/pull_requests"> Pull Requests</a>
+                  </a>
                 </li>
               </ul>
             </nav>
@@ -58,22 +41,6 @@
                   </svg>
                 </span>
               </button>
-              <ul class="option-dropdown">
-                <li>
-                  <a href="/intest-tech/qaadmin/settings">Settings</a>
-                </li>
-                <li>
-                  <a href="/intest-tech/qaadmin/requests">Requests</a>
-                </li>
-                <li>
-                  <a href="/intest-tech/qaadmin/caches">Caches</a>
-                </li>
-                <li>
-                  <button class="trigger-build-anchor" type="button" data-ember-action=""
-                      data-ember-action-399="399">Trigger build
-                  </button>
-                </li>
-              </ul>
             </nav>
           </div>
           <div class="travistab-body repo-body">
@@ -118,7 +85,6 @@
                 <ul class="list-icon">
                   <li>
                     <span class="label-align inner-underline commit-commit">
-                      <!--<i class="fal fa-sitemap icon-info fa-fw"></i>-->
                       <i class="fal fa-map-signs icon-info"></i>
                       Stage {{data.stage}}</span>
                   </li>
