--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -37,7 +37,7 @@
 			width: 110px;
 			margin:30px 0 0 90px;
 			border: 1px solid #FFFFF0;
-			background-color: #31C552;
+			background-color: #3eaaaf;
 
 			border-radius: 4px;
 			font-size: 14px;
