update: add project-create page.

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -52,8 +52,7 @@
                         <div class="menu-separator"></div>
                         <ul class="navigation-nested">
                             <li class="username"><span>Shin Yang</span></li>
-                            <a title="Your profile" href="/profile/ityoung" id="ember374"
-                               class="signed-in topbar-menu-item ember-view">
+                            <a title="Your profile" href="/profile/ityoung" class="signed-in topbar-menu-item">
                                 <li>
                                     <svg viewBox="0 0 15 15" class="icon">
                                         <path d="M13.709 8.91l-1.13-.659c.037-.247.076-.494.076-.751a5.03 5.03 0 0 0-.083-.82l1.117-.672c.48-.289.636-.917.348-1.397l-.863-1.436a1.021 1.021 0 0 0-1.397-.348l-1.121.674s-.76-.515-1.193-.686V1.518A1.02 1.02 0 0 0 8.445.5H6.769a1.02 1.02 0 0 0-1.018 1.018v1.296c-.454.18-.866.432-1.245.729l-1.132-.66a1.02 1.02 0 0 0-1.392.367l-.844 1.447a1.022 1.022 0 0 0 .366 1.393l1.13.659c-.037.247-.076.494-.076.751 0 .281.039.552.083.82l-1.117.672c-.48.289-.636.917-.348 1.397l.864 1.436c.289.48.917.636 1.397.348l1.121-.674c.365.279.76.515 1.193.686v1.296c0 .56.458 1.018 1.018 1.018h1.676a1.02 1.02 0 0 0 1.018-1.018v-1.296s.866-.432 1.245-.729l1.132.66a1.02 1.02 0 0 0 1.392-.367l.844-1.448a1.02 1.02 0 0 0-.367-1.391zm-6.102.669a2.08 2.08 0 1 1 0-4.159 2.08 2.08 0 0 1 0 4.159z"></path>
@@ -62,10 +61,8 @@
                                 </li>
                             </a>
                             <div class="nav-nested"></div>
-                            <!---->
                             <div class="nav-nested"></div>
-                            <a href="/" title="Sign out of Travis CI" class="topbar-menu-item"
-                               data-ember-action="" data-ember-action-375="375">
+                            <a href="/" title="Sign out of Travis CI" class="topbar-menu-item">
                                 <li>
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.49 13.78"
                                          class="icon">
@@ -91,11 +88,11 @@
     {% raw %}
     <!--侧边栏-->
     <aside id="left">
-        <div id="ember423" class="dupa ember-view">
+        <div class="dupa">
             <div class="search search--sidebar">
                 <div class="search-inner">
                     <input placeholder="Search all repositories" id="travis-search"
-                           class="ember-text-field ember-view" type="text">
+                           class="ember-text-field" type="text">
                     <label for="travis-search">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15" class="icon">
                             <g fill="none" stroke="#9d9d9d" stroke-linecap="round" stroke-linejoin="round"
@@ -114,7 +111,7 @@
                         <a href="#">测试项目</a>
                     </li>
                     <li id="tab_new" class="display-inline">
-                        <a title="新增项目" href="/profile/ityoung" id="ember426" class="ember-view">
+                        <a title="新增项目" href="/project/create">
                             <span class="icon icon--plus"></span>
                         </a>
                     </li>
