--- a/apps/static/css/qaadmin.css
+++ b/apps/static/css/qaadmin.css
@@ -154,3 +154,48 @@
     margin:.3rem .1rem 0 .5rem;
     float:left;
 }
+
+/* create project */
+.container{
+    width: 960px;
+    margin: 0 auto;
+}
+.content{
+    width: 960px;
+    margin: 10 auto;
+    border-top: 1px solid #ccc;
+
+}
+.box{
+    width:300px;
+    margin: 30px auto;
+}
+.create-project-header{
+    margin: 80px auto 30px auto;
+    text-align: center;
+    font-size: 34px;
+}
+input{
+    width: 200px;
+    padding: 6px 9px;
+}
+#cancel_button{
+    cursor: pointer;
+    line-height: 35px;
+    width: 110px;
+    border: 1px solid #FFFFF0;
+    background-color: gray;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #FFFFF0;
+}
+#submit_button{
+    cursor: pointer;
+    line-height: 35px;
+    width: 110px;
+    border: 1px solid #FFFFF0;
+    background-color: #3eaaaf;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #FFFFF0;
+}
