update: add create project page; fix list project with no result.

--- a/apps/templates/create-project.html
+++ b/apps/templates/create-project.html
@@ -8,7 +8,7 @@
         新建项目
     </div>
     <div class="content">
-        <form method="post" action="/api/project/create">
+        <form method="post" action="/project/create">
             <div class="box">
                 <label>项目名：</label>
                 <input type="text" name="name"/>
