--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -135,13 +135,14 @@
                             <h2 :class="'tile-title '+x.status">
                                 <a :href="'/project/'+x.project" class="active">
                                     <span class="label-align inner-underline">
-                                        <i class="fal fa-check" style="font-size: 14px;" v-if="x.success"></i>
+                                        <i class="fal fa-circle" style="font-size: 13px; width: 14px; " v-if="!x.has_record"></i>
+                                        <i class="fal fa-check" style="font-size: 14px;" v-else-if="x.success"></i>
                                         <i class="fal fa-times" style="font-size: 14px; width: 14px; padding-left: 1px;" v-else></i>
                                         {{x.project}}
                                     </span>
                                 </a>
                             </h2>
-                            <p :class="'tile-title float-right '+x.status">
+                            <p :class="'tile-title float-right '+x.status" v-if="x.has_record">
                                 <a :href="'/project/'+x.project+'/job/'">
                                     <span class="label-align inner-underline">
                                         <i class="fal fa-hashtag"></i>
@@ -153,7 +154,8 @@
                                 <span class="label-align">
                                     <i class="fal fa-alarm-clock icon-info"></i>
                                     Duration:
-                                    <time class="duration" datetime="PT35S" title="Started September 20, 2018 22:13:27">35 sec</time>
+                                    <time class="duration" datetime="PT35S" title="Started September 20, 2018 22:13:27" v-if="x.has_record">35 sec</time>
+                                    <a v-else>-</a>
                                 </span>
                             </p>
                         </div>
@@ -172,8 +174,17 @@
 $(function(){
     $.get('/api/test-result/latest',function(res){
         if(!res){return alert('异常')}
-            res.data.map(x=>x.success?x.status="passed":x.status="errored")
-            sidebarApp.list=res.data
+        res.data.map(function(item, index){
+                if(!item.has_record){
+                    item.status=""
+                } else if(item.success){
+                    item.status="passed"
+                } else {
+                    item.status="errored"
+                }
+            }
+        )
+        sidebarApp.list=res.data
     })
 });
 var sidebarApp=new Vue({
