update: Floating point precision change to 3bits.

--- a/apps/templates/index.html
+++ b/apps/templates/index.html
@@ -80,7 +80,7 @@
                                         <div>
                                             <time class="label-align" datetime="PT49S">
                                                 <i class="fal fa-alarm-clock icon-info"></i>
-                                                {{item.duration}} sec
+                                                {{item.duration.toFixed(3)}} sec
                                             </time>
                                         </div>
 
