--- a/apps/templates/job.html
+++ b/apps/templates/job.html
@@ -72,7 +72,7 @@
                   <li title="Started September 24, 2018 19:58:48" class="commit-stopwatch">
                     <span class="label-align">
                       <i class="fal fa-alarm-clock icon-info"></i>
-                      Ran for <time datetime="PT53S">{{data.duration}} sec</time>
+                      Ran for <time datetime="PT53S">{{data.duration.toFixed(3)}} sec</time>
                     </span>
                   </li>
                 </ul>
