update: version list shows time ago.

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -16,6 +16,7 @@
     <script src="/static/js/opensource/vue.js"></script>
     <script type="text/javascript" async="" src="/static/js/opensource/ga.js"></script>
     <script src="/static/js/opensource/travis-check-browser-support.js" async=""></script>
+    <script src="/static/js/opensource/vue-timeago.min.js"></script>
     {% block script %}
         {{script}}
     {% endblock %}
