add: setting page.

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -42,50 +42,50 @@
             <nav id="navigation" class="navigation ">
                 <ul>
                     <li>
-                        <a title="Travis CI Documentation" class="navigation-anchor">[TODO:]Documentation</a>
+                        <a title="QA Admin Documentation" href="https://github.com/intest-tech/qaadmin/blob/master/README.md" class="navigation-anchor">Documentation</a>
                     </li>
-                    <li id="profile-menu-link" class="profile menu signed-in">
-                        <a href="/profile/ityoung" class="navigation-anchor navigation-profile-link signed-in">
-                            <span class="avatar-wrapper">
-                                <span class="avatar">
-                                    <span class="pseudo-avatar" aria-hidden="true" data-initials="SY"></span>
-                                    <img class="real-avatar" src="https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=40"
-                                         srcset="https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=40 1x, https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=80 2x"
-                                         alt="Shin Yang avatar">
-                                </span>
-                            </span>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 8.59" class="icon">
-                                <path d="M16.5.5L9.2 7.8a.99.99 0 0 1-1.39 0L.5.5" fill="none" stroke="#686b6e"
-                                      stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>
-                            </svg>
-                        </a>
-                        <div class="menu-separator"></div>
-                        <ul class="navigation-nested">
-                            <li class="username"><span>Shin Yang</span></li>
-                            <a title="Your profile" href="/profile/ityoung" class="signed-in topbar-menu-item">
-                                <li>
-                                    <svg viewBox="0 0 15 15" class="icon">
-                                        <path d="M13.709 8.91l-1.13-.659c.037-.247.076-.494.076-.751a5.03 5.03 0 0 0-.083-.82l1.117-.672c.48-.289.636-.917.348-1.397l-.863-1.436a1.021 1.021 0 0 0-1.397-.348l-1.121.674s-.76-.515-1.193-.686V1.518A1.02 1.02 0 0 0 8.445.5H6.769a1.02 1.02 0 0 0-1.018 1.018v1.296c-.454.18-.866.432-1.245.729l-1.132-.66a1.02 1.02 0 0 0-1.392.367l-.844 1.447a1.022 1.022 0 0 0 .366 1.393l1.13.659c-.037.247-.076.494-.076.751 0 .281.039.552.083.82l-1.117.672c-.48.289-.636.917-.348 1.397l.864 1.436c.289.48.917.636 1.397.348l1.121-.674c.365.279.76.515 1.193.686v1.296c0 .56.458 1.018 1.018 1.018h1.676a1.02 1.02 0 0 0 1.018-1.018v-1.296s.866-.432 1.245-.729l1.132.66a1.02 1.02 0 0 0 1.392-.367l.844-1.448a1.02 1.02 0 0 0-.367-1.391zm-6.102.669a2.08 2.08 0 1 1 0-4.159 2.08 2.08 0 0 1 0 4.159z"></path>
-                                    </svg>
-                                    Settings
-                                </li>
-                            </a>
-                            <div class="nav-nested"></div>
-                            <div class="nav-nested"></div>
-                            <a href="/" title="Sign out of Travis CI" class="topbar-menu-item">
-                                <li>
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.49 13.78"
-                                         class="icon">
-                                        <g fill="none" stroke="#686b6e" stroke-linecap="round"
-                                           stroke-linejoin="round" stroke-miterlimit="10">
-                                            <path d="M10.99 10.78l2.45-4.87c0-.01.01-.02.01-.03M14.99 6.5c0 .01-.01.02-.01.03L13.64 9.2M11.21 4.07a1.039 1.039 0 0 0-.78-.06l.27-.58c.25-.52.05-1.16-.44-1.42a.96.96 0 0 0-.78-.05c.2-.51 0-1.09-.47-1.34A.987.987 0 0 0 8.55.5c-.39 0-.75.24-.93.6-.1-.19-.25-.36-.45-.46-.14-.07-.3-.11-.46-.11-.39 0-.76.24-.94.61L3.01 6.5l-.48-1.97c0-.01-.01-.03-.01-.04-.11-.49-.51-.83-.98-.83-.06 0-.12.01-.18.02-.44.08-.8.47-.86.94 0 .05-.12 5.31 1.61 7.17.37.4.77.71 1.22.95.01 0 .01.01.02.01.64.35 1.33.53 2.02.53h.14c.5-.02.98-.13 1.44-.33.4-.18.97-.5 1.41-1.02.2-.24.33-.5.45-.75l.07-.14c.11-.21.31-.64.31-.64l2.44-4.86c.27-.57.07-1.21-.42-1.47zM5.83 5.15L7.79.84M9.48 1.96L7.61 5.91M10.43 4.01L9.01 6.89"></path>
-                                        </g>
-                                    </svg>
-                                    Sign Out
-                                </li>
-                            </a>
-                        </ul>
-                    </li>
+                    <!--<li id="profile-menu-link" class="profile menu signed-in">-->
+                        <!--<a href="/profile/ityoung" class="navigation-anchor navigation-profile-link signed-in">-->
+                            <!--<span class="avatar-wrapper">-->
+                                <!--<span class="avatar">-->
+                                    <!--<span class="pseudo-avatar" aria-hidden="true" data-initials="SY"></span>-->
+                                    <!--<img class="real-avatar" src="https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=40"-->
+                                         <!--srcset="https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=40 1x, https://avatars0.githubusercontent.com/u/12296804?v=4?v=3&amp;s=80 2x"-->
+                                         <!--alt="Shin Yang avatar">-->
+                                <!--</span>-->
+                            <!--</span>-->
+                            <!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 8.59" class="icon">-->
+                                <!--<path d="M16.5.5L9.2 7.8a.99.99 0 0 1-1.39 0L.5.5" fill="none" stroke="#686b6e"-->
+                                      <!--stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"></path>-->
+                            <!--</svg>-->
+                        <!--</a>-->
+                        <!--<div class="menu-separator"></div>-->
+                        <!--<ul class="navigation-nested">-->
+                            <!--<li class="username"><span>Shin Yang</span></li>-->
+                            <!--<a title="Your profile" href="/profile/ityoung" class="signed-in topbar-menu-item">-->
+                                <!--<li>-->
+                                    <!--<svg viewBox="0 0 15 15" class="icon">-->
+                                        <!--<path d="M13.709 8.91l-1.13-.659c.037-.247.076-.494.076-.751a5.03 5.03 0 0 0-.083-.82l1.117-.672c.48-.289.636-.917.348-1.397l-.863-1.436a1.021 1.021 0 0 0-1.397-.348l-1.121.674s-.76-.515-1.193-.686V1.518A1.02 1.02 0 0 0 8.445.5H6.769a1.02 1.02 0 0 0-1.018 1.018v1.296c-.454.18-.866.432-1.245.729l-1.132-.66a1.02 1.02 0 0 0-1.392.367l-.844 1.447a1.022 1.022 0 0 0 .366 1.393l1.13.659c-.037.247-.076.494-.076.751 0 .281.039.552.083.82l-1.117.672c-.48.289-.636.917-.348 1.397l.864 1.436c.289.48.917.636 1.397.348l1.121-.674c.365.279.76.515 1.193.686v1.296c0 .56.458 1.018 1.018 1.018h1.676a1.02 1.02 0 0 0 1.018-1.018v-1.296s.866-.432 1.245-.729l1.132.66a1.02 1.02 0 0 0 1.392-.367l.844-1.448a1.02 1.02 0 0 0-.367-1.391zm-6.102.669a2.08 2.08 0 1 1 0-4.159 2.08 2.08 0 0 1 0 4.159z"></path>-->
+                                    <!--</svg>-->
+                                    <!--Settings-->
+                                <!--</li>-->
+                            <!--</a>-->
+                            <!--<div class="nav-nested"></div>-->
+                            <!--<div class="nav-nested"></div>-->
+                            <!--<a href="/" title="Sign out of Travis CI" class="topbar-menu-item">-->
+                                <!--<li>-->
+                                    <!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.49 13.78"-->
+                                         <!--class="icon">-->
+                                        <!--<g fill="none" stroke="#686b6e" stroke-linecap="round"-->
+                                           <!--stroke-linejoin="round" stroke-miterlimit="10">-->
+                                            <!--<path d="M10.99 10.78l2.45-4.87c0-.01.01-.02.01-.03M14.99 6.5c0 .01-.01.02-.01.03L13.64 9.2M11.21 4.07a1.039 1.039 0 0 0-.78-.06l.27-.58c.25-.52.05-1.16-.44-1.42a.96.96 0 0 0-.78-.05c.2-.51 0-1.09-.47-1.34A.987.987 0 0 0 8.55.5c-.39 0-.75.24-.93.6-.1-.19-.25-.36-.45-.46-.14-.07-.3-.11-.46-.11-.39 0-.76.24-.94.61L3.01 6.5l-.48-1.97c0-.01-.01-.03-.01-.04-.11-.49-.51-.83-.98-.83-.06 0-.12.01-.18.02-.44.08-.8.47-.86.94 0 .05-.12 5.31 1.61 7.17.37.4.77.71 1.22.95.01 0 .01.01.02.01.64.35 1.33.53 2.02.53h.14c.5-.02.98-.13 1.44-.33.4-.18.97-.5 1.41-1.02.2-.24.33-.5.45-.75l.07-.14c.11-.21.31-.64.31-.64l2.44-4.86c.27-.57.07-1.21-.42-1.47zM5.83 5.15L7.79.84M9.48 1.96L7.61 5.91M10.43 4.01L9.01 6.89"></path>-->
+                                        <!--</g>-->
+                                    <!--</svg>-->
+                                    <!--Sign Out-->
+                                <!--</li>-->
+                            <!--</a>-->
+                        <!--</ul>-->
+                    <!--</li>-->
                 </ul>
             </nav>
         </div>
@@ -143,14 +143,14 @@
                                     </span>
                                 </a>
                             </h2>
-                            <p :class="'tile-title float-right '+x.status" v-if="x.has_record">
-                                <a :href="'/project/'+x.project+'/job/'">
-                                    <span class="label-align inner-underline">
-                                        <i class="fal fa-hashtag"></i>
-                                        9
-                                    </span>
-                                </a>
-                            </p>
+                            <!--<p :class="'tile-title float-right '+x.status" v-if="x.has_record">-->
+                                <!--<a :href="'/project/'+x.project+'/job/'">-->
+                                    <!--<span class="label-align inner-underline">-->
+                                        <!--<i class="fal fa-hashtag"></i>-->
+                                        <!--9-->
+                                    <!--</span>-->
+                                <!--</a>-->
+                            <!--</p>-->
                             <p>
                                 <span class="label-align">
                                     <i class="fal fa-alarm-clock icon-info"></i>
