update: move libs to apps directory.

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="zh-CN">
 <head>
-    <title>{% block title %}Default title{% endblock %}</title>
+    <title>{% block title %}QA Admin{% endblock %}</title>
     <meta charset="utf-8">
     <script src="/static/js/opensource/jquery.min.js"></script>
     <script src="/static/js/opensource/vue.js"></script>
