--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -33,7 +33,7 @@
 			cursor: pointer;
 			line-height: 35px;
 			width: 110px;
-			margin:30px 0 0 90px;
+			margin:10px 0 0 90px;
 			border: 1px solid #FFFFF0;
 			background-color: #3eaaaf;
 
@@ -56,6 +56,17 @@
 				<div class="box">
 					<label>密　码：</label>
 					<input type="password" name="password"/>
+				</div>
+				<div class="box">
+				{% with messages = get_flashed_messages() %}
+				  {% if messages %}
+					<div class=flashes>
+					{% for message in messages %}
+					  <a>{{ message }}</a>
+					{% endfor %}
+					</div>
+				  {% endif %}
+				{% endwith %}
 				</div>
 				<div class="box">
 					<button id="submit_button">登录</button>
